--- a/src/sqlz/config/config.json
+++ b/src/sqlz/config/config.json
@@ -1,33 +1,33 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "postgres",
-    "database": "app-dev",
+    "username": "root",
+    "password": null,
+    "database": "prohuman-main-dev",
     "host": "127.0.0.1",
-    "port": 5432,
-    "dialect": "postgres",
+    "port": 3306,
+    "dialect": "mysql",
     "logging": true,
     "force": true,
     "timezone": "+00:00"
   },
   "test": {
-    "username": "postgres",
-    "password": "postgres",
-    "database": "app-test",
+    "username": "root",
+    "password": null,
+    "database": "prohuman-main-test",
     "host": "127.0.0.1",
-    "port": 5432,
-    "dialect": "postgres",
+    "port": 3306,
+    "dialect": "mysql",
     "logging": true,
     "force": true,
     "timezone": "+00:00"
   },
   "production": {
-    "username": "postgres",
-    "password": "postgres",
-    "database": "app",
+    "username": "root",
+    "password": null,
+    "database": "prohuman-main-prod",
     "host": "127.0.0.1",
-    "port": 5432,
-    "dialect": "postgres",
+    "port": 3306,
+    "dialect": "mysql",
     "logging": true,
     "force": true,
     "timezone": "+00:00"
