--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express-boom": "~2.0.0",
     "express-validator": "~3.1.2",
     "morgan": "~1.8.1",
+    "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
     "pg": "~6.1.2",
     "pg-hstore": "~2.3.2",
