--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
     "express": "~4.15.0",
     "express-boom": "~2.0.0",
     "express-validator": "~3.1.2",
+    "mime": "^2.4.0",
     "morgan": "~1.8.1",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
-    "pg": "~6.1.2",
+    "pg": "^6.4.2",
     "pg-hstore": "~2.3.2",
     "sequelize": "~3.30.2",
     "uuid": "~3.0.1",
@@ -59,13 +60,15 @@
     "@types/sequelize": "~3.4.40",
     "@types/winston": "~2.2.0",
     "chai": "~3.5.0",
+    "debug": "^4.1.0",
     "extendify": "~1.0.0",
     "glob": "~7.1.1",
-    "gulp": "~3.9.1",
+    "growl": "^1.10.5",
+    "gulp": "^3.9.1",
     "gulp-istanbul": "~1.1.1",
     "gulp-json-refs": "~0.1.1",
     "gulp-mocha": "~3.0.1",
-    "gulp-nodemon": "~2.2.1",
+    "gulp-nodemon": "^2.2.1",
     "gulp-plumber": "~1.1.0",
     "gulp-sourcemaps": "~2.4.0",
     "gulp-tslint": "~7.0.1",
@@ -73,6 +76,7 @@
     "gulp-typescript": "~3.1.4",
     "husky": "^0.13.2",
     "lint-staged": "^3.4.0",
+    "lodash": "^4.17.11",
     "remap-istanbul": "~0.8.4",
     "rimraf": "~2.5.4",
     "run-sequence": "~1.2.2",
