--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "chai": "~3.5.0",
     "debug": "^4.1.0",
     "extendify": "~1.0.0",
+    "fresh": "^0.5.2",
     "glob": "~7.1.1",
     "growl": "^1.10.5",
     "gulp": "^3.9.1",
