--- a/package.json
+++ b/package.json
@@ -44,10 +44,15 @@
     "morgan": "~1.8.1",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
+    "path": "^0.12.7",
     "pg": "^6.4.2",
     "pg-hstore": "~2.3.2",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.6.3",
     "sequelize": "~3.30.2",
     "uuid": "~3.0.1",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
     "winston": "~2.3.1"
   },
   "devDependencies": {
@@ -82,6 +87,7 @@
     "rimraf": "~2.5.4",
     "run-sequence": "~1.2.2",
     "sequelize-cli": "^2.7.0",
+    "ts-loader": "^5.3.1",
     "tslint": "~4.5.1",
     "typedoc": "~0.5.7",
     "typescript": "~2.2.1",
