--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     ]
   },
   "dependencies": {
+    "autoprefixer": "^9.4.2",
     "body-parser": "~1.17.0",
     "cors": "~2.8.1",
     "cross-env": "~3.2.3",
@@ -62,9 +63,12 @@
     "@types/express-validator": "~2.20.33",
     "@types/mocha": "~2.2.39",
     "@types/morgan": "~1.7.32",
+    "@types/react": "^16.7.13",
+    "@types/react-dom": "^16.0.11",
     "@types/sequelize": "~3.4.40",
     "@types/winston": "~2.2.0",
     "chai": "~3.5.0",
+    "css-loader": "^2.0.0",
     "debug": "^4.1.0",
     "extendify": "~1.0.0",
     "fresh": "^0.5.2",
@@ -83,14 +87,19 @@
     "husky": "^0.13.2",
     "lint-staged": "^3.4.0",
     "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
     "remap-istanbul": "~0.8.4",
     "rimraf": "~2.5.4",
     "run-sequence": "~1.2.2",
+    "sass-loader": "^7.1.0",
     "sequelize-cli": "^2.7.0",
+    "style-loader": "^0.23.1",
     "ts-loader": "^5.3.1",
     "tslint": "~4.5.1",
     "typedoc": "~0.5.7",
-    "typescript": "~2.2.1",
+    "typescript": "^3.2.2",
     "typescript-formatter": "^5.1.1"
   },
   "engines": {
